--- a/Main/AndroidManifest.xml
+++ b/Main/AndroidManifest.xml
@@ -12,14 +12,11 @@
 
     <application
         android:allowBackup="true"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:supportsRtl="true">
         
         <!-- Define the Main activity -->
         <activity
             android:name=".Main"
-            android:label="@string/app_name"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
