--- a/App/AndroidManifest.xml
+++ b/App/AndroidManifest.xml
@@ -3,25 +3,43 @@
 
     <!-- Define the required permissions (adjust as necessary) -->
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-feature android:name="android.hardware.vulkan.version" android:version="1" />
     
     <!-- Define the minimum and target SDK versions -->
     <uses-sdk
         android:minSdkVersion="34"
         android:targetSdkVersion="34" />
 
+    <!-- Define the Main activity -->
     <application
         android:allowBackup="true"
-        android:supportsRtl="true">
-        
-        <!-- Define the Main activity -->
-        <activity
-            android:name=".Main"
+        android:supportsRtl="true"
+        android:appCategory="game"
+        android:isGame="true"
+        android:appComponentFactory="androidx.core.app.CoreComponentFactory">
+
+         <activity
+            android:name="androidx.games.activity.GameActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
             android:exported="true">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="App" />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <!-- <activity -->
+        <!--     android:name=".Main" -->
+        <!--     android:exported="true"> -->
+        <!--     <intent-filter> -->
+        <!--         <action android:name="android.intent.action.MAIN" /> -->
+        <!--         <category android:name="android.intent.category.LAUNCHER" /> -->
+        <!--     </intent-filter> -->
+        <!-- </activity> -->
     </application>
 
 </manifest>
